--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
     "allowJs": false,
-    "target": "es6",
+    "target": "ESNext",
     "module": "commonjs",
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "esModuleInterop": true
   },
   "include": [
     "public/src/**/*",
-    "src/**/*", 
+    "src/**/*",
     "test/**/*",
   ],
-  "exclude":[
+  "exclude": [
     "node_modules",
   ]
 }
