--- a/install/package.json
+++ b/install/package.json
@@ -78,6 +78,7 @@
         "jquery-serializeobject": "1.0.0",
         "jquery-ui": "1.13.2",
         "jsesc": "3.0.2",
+        "jshint": "^2.13.6",
         "json2csv": "5.0.7",
         "jsonwebtoken": "8.5.1",
         "less": "4.1.3",
