--- a/install/package.json
+++ b/install/package.json
@@ -84,6 +84,7 @@
         "lodash": "4.17.21",
         "logrotate-stream": "0.2.8",
         "lru-cache": "7.14.1",
+        "iroh": "^0.3.0",
         "material-design-lite": "1.3.0",
         "mime": "3.0.0",
         "mkdirp": "1.0.4",
